# jopae-otvalille

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jopae_otvalille/: README.rst  pyproject.toml
python_scripts/: __init__.py  etl.py  interpretations.py  jopae_tg_bot.py  message.py  subscriptions.py
python_scripts/config/: consts.py  endpoints.py  types.py
