[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jopae_otvalille"
version = "0.1.0"
description = "Telegram bot that sends daily morning messages."
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiogram>=3.17",
    "python-dotenv>=1.0",
    "APScheduler>=3.10",
    "pytz>=2024.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "coverage[toml]>=7.0"
]

[project.urls]
Homepage = "https://github.com/GoodchildTrevor/jopae_otvalille"
Issues = "https://github.com/GoodchildTrevor/jopae_otvalille/issues"
